API externa conectada
